--- a/css/calculator.css
+++ b/css/calculator.css
@@ -1,6 +1,9 @@
+h1{
+    max-width: none;
+}
 
-b{
-    font-weight: bold;
+p{
+    max-width: 500px;
 }
 
 .warning {
@@ -9,47 +12,64 @@ b{
 }
 
 .container {
-    padding: 50px;
-    background-color: rgba(17, 16, 16, 0.2);
+    margin: auto;
     display: flex;
     flex-direction: row;
+    min-height: fit-content;
+    justify-content: center;
+
 }
 
+.container section.results {
+    margin-left: auto;
+    display: flex;
+    min-width: 411px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: flex-start;
+}
+
+
 .intro{
-    margin: 0;
-    padding: 0;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    width: 100%;
+    flex-wrap: nowrap;
+    align-content: center;
+    width: 60%;
+    margin: 0;
 }
 
 
 .calculator {
-
     margin-top: 50px;
-    max-width: 800px; 
+    display: block;
+    float: left;
+    height: fit-content;
 }
 
-
 li.question {
+    position: relative;
     list-style: none;
     font-size: calc(12px + 0.1vw);
     color: white;
     counter-increment: list;
     counter-reset: li;
-    display: block;
-    height: 32px;
-    position: relative;
-    margin-bottom: 80px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 100px;
+    width: 100%;
+    align-items: top;
 }
 
+li.question:last-of-type {
+    margin-bottom: 0;
+}
 
-
-li.question .ask {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+.ask {
+    display: table-cell;
+    vertical-align: middle;
+    align-self: center;
+    
 }
 
 li.question::after{
@@ -58,7 +78,8 @@ li.question::after{
     height: 1px;
     background: #72767D;
     display: block;
-    position: relative;
+    left: 0;
+    position: absolute;
     top: 70px;
 }
 
@@ -68,8 +89,6 @@ li.question:last-of-type::after{
 
 ol {
     display: block;
-    max-width: 500px;
-    min-width: 440px;
 }
 
 
@@ -83,36 +102,43 @@ li.question:before {
     line-height: calc(20px + 0.5vw);
     border-radius: 50px;
     min-width: 22px;
+    min-height: 22px;
     text-align: center;
     display: block;
     margin-right: 1em;
+    margin-top: 3px;
     float: left;
 }
 
 
 span.spinner-input {
     height: calc(25px + 0.5vw);
-    margin-bottom: 50px;
-    justify-content: space-between;
     display: block;
-    float: right;
+    width: fit-content;
+    margin-left: auto;
 }
 
 
 .spinner-input div {
-    height: 100%;
+    height: fit-content;
     display: flex;
-    justify-content: center;    
+    justify-content: center; 
+    justify-items: stretch;   
     margin-bottom: 8px;
+    margin-left: 15px;
 }
 
 .spinner-label {
+    display: flex;
+    justify-content: center;
+    text-align: center;
     font-size: 12px;
     color: #72767D;
-    display: flex;
+    
 }
 
 button.spinner-btn {
+    display: inline-block;
     border: none;
     box-sizing: border-box;
     background-color: #FB3636;
@@ -120,9 +146,8 @@ button.spinner-btn {
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     text-align: center;
-    height: 100%;
-    width: 35px;
-    margin-bottom: 15px;
+    min-height: 32px;
+    width: 37px;
 }
 
 button.spinner-btn.left {
@@ -142,7 +167,7 @@ input[type="number"] {
           border-radius: 0px;
           border: none;
           width: 50px;
-          height: 100%;
+          min-height: 32px;
           margin: 0;
 }
 
@@ -150,8 +175,96 @@ input[type="number"]::-webkit-inner-spin-button {
     display: none;
 }
 
-section.results {
-    width: 50%;
-    height: 100%;
+
+.bar {
+    margin-top: 6px;
+    background-color: #1e222abe;
+    height: 35px;
+    border-radius: 10px;
 }
+
+.result-label {
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.result-bar{
+    background-color: #FB3636;
+    float: right;
+    height: 35px;
+    text-align: center;
+    line-height: 35px;
+    width: max-content;
+    padding: 0 15px;
+    border-radius: 10px;
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.meat-result > .bar::after{
+    content: "";
+    display: block;
+    background-image: url(../img/meat.svg);
+    background-repeat: no-repeat;
+    background-position-y: center;
+    background-position-x: left;
+    height: 100%;
+    margin-left: 6px;
+    width: 100%;
+}
+
+.beer-result > .bar::after{
+    content: "";
+    display: block;
+    background-image: url(../img/beer.svg);
+    background-repeat: no-repeat;
+    background-position-y: center;
+    background-position-x: left;
+    height: 100%;
+    width: 100%;
+    margin-left: 8px;
+}
+
+.soda-result > .bar::after{
+    content: "";
+    display: block;
+    background-image: url(../img/soda.svg);
+    background-repeat: no-repeat;
+    background-position-y: center;
+    background-position-x: left;
+    height: 100%;
+    width: 100%;
+    margin-left: 9px;
+}
+
+.money-result > .bar::after{
+    content: "";
+    display: block;
+    background-image: url(../img/money.svg);
+    background-repeat: no-repeat;
+    background-position-y: center;
+    background-position-x: left;
+    margin-left: 5px;
+    height: 100%;
+    width: 100%;
+}
+
+.unity {
+    margin-top: 8px;
+    color: gray;
+    font-size: 14px;
+}
+
+.unt-label {
+    float: right;
+}
+
+
+.results .box:last-of-type {
+    margin-bottom: 0px;
+}
+
+
+
+
 
