--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+::selection {
+    background-color: rgb(145, 147, 158);
+}
+
 html {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #2A303A;
@@ -51,7 +55,7 @@ nav ul {
 
 
 .btn-black a {
-    background-color: #242933;
+    background-color: #1e222abe;
     border: none;
     color: white;
     font-size: calc(13px + 0.3vw);
@@ -110,11 +114,6 @@ p {
     margin-bottom: 20px;
     line-height: calc(12px + 0.3vw * 1.5);
     max-width: calc(300px + 4vw)
-}
-
-
-::selection {
-    background-color: rgb(145, 147, 158);
 }
 
 .btn {
